# simplecalc

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  calculator.py  pyproject.toml  requirements-dev.txt  test_calculator.py
.github/: CODEBASE_REVIEW.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  python.instructions.md
.github/instructions/: ai-assisted-output.instructions.md  evergreen-development.instructions.md  python.instructions.md
.github/prompts/: tests-gap-analysis.prompt.md
src/simplecalc/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
